--- a/snippets/checkbox.liquid
+++ b/snippets/checkbox.liquid
@@ -6,6 +6,7 @@
       {{ id }}
       {{ click }}
       {{ value }}
+      {{ name }}
       type="checkbox"
       class="hidden peer"
       required>
