Updated checkbox snippet

--- a/snippets/checkbox.liquid
+++ b/snippets/checkbox.liquid
@@ -8,8 +8,7 @@
       {{ value }}
       {{ name }}
       type="checkbox"
-      class="hidden peer"
-      required>
+      class="hidden peer">
     <label {{ for }} class="
       peer-checked:[&_svg]:scale-100
       hover:text-primary
