--- a/assets/app.css
+++ b/assets/app.css
@@ -866,6 +866,9 @@ input[type='number']::-webkit-outer-spin-button,
 .top-\[58px\] {
   top: 58px;
 }
+.bottom-1 {
+  bottom: 0.25rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -1020,9 +1023,6 @@ input[type='number']::-webkit-outer-spin-button,
 .mt-auto {
   margin-top: auto;
 }
-.mr-2 {
-  margin-right: 0.5rem;
-}
 .block {
   display: block;
 }
@@ -1113,9 +1113,6 @@ input[type='number']::-webkit-outer-spin-button,
 .min-h-screen {
   min-height: 100vh;
 }
-.min-h-full {
-  min-height: 100%;
-}
 .w-1\/2 {
   width: 50%;
 }
@@ -1143,6 +1140,9 @@ input[type='number']::-webkit-outer-spin-button,
 .w-7 {
   width: 1.75rem;
 }
+.w-\[70vmin\] {
+  width: 70vmin;
+}
 .w-auto {
   width: auto;
 }
@@ -1160,14 +1160,8 @@ input[type='number']::-webkit-outer-spin-button,
 .w-screen {
   width: 100vw;
 }
-.w-\[30vmin\] {
-  width: 30vmin;
-}
-.w-\[50vmin\] {
-  width: 50vmin;
-}
-.w-\[70vmin\] {
-  width: 70vmin;
+.w-3\/4 {
+  width: 75%;
 }
 .min-w-\[250px\] {
   min-width: 250px;
@@ -1211,9 +1205,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .max-w-sm {
   max-width: 24rem;
-}
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1323,9 +1314,6 @@ input[type='number']::-webkit-outer-spin-button,
 .items-start {
   align-items: flex-start;
 }
-.items-end {
-  align-items: flex-end;
-}
 .items-center {
   align-items: center;
 }
@@ -1346,9 +1334,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .justify-evenly {
   justify-content: space-evenly;
-}
-.justify-stretch {
-  justify-content: stretch;
 }
 .gap-1 {
   gap: 0.25rem;
@@ -1693,9 +1678,6 @@ input[type='number']::-webkit-outer-spin-button,
 .pr-2 {
   padding-right: 0.5rem;
 }
-.pr-3 {
-  padding-right: 0.75rem;
-}
 .pt-0 {
   padding-top: 0px;
 }
@@ -1707,6 +1689,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pl-3 {
+  padding-left: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1916,6 +1901,9 @@ input[type='number']::-webkit-outer-spin-button,
 .opacity-25 {
   opacity: 0.25;
 }
+.opacity-50 {
+  opacity: 0.5;
+}
 .opacity-70 {
   opacity: 0.7;
 }
@@ -1941,9 +1929,6 @@ input[type='number']::-webkit-outer-spin-button,
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.outline {
-  outline-style: solid;
 }
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
@@ -2079,6 +2064,12 @@ div[data-block-handle='ig_feed'] {
     display: block !important;
     content: '' !important;
     clear: both !important;
+  }
+}
+@media (min-width: 640px) {
+
+  .sm\:shadow-m {
+    box-shadow: var(--shadow-medium);
   }
 }
 .placeholder\:text-white\/90::-moz-placeholder {
@@ -2222,15 +2213,20 @@ div[data-block-handle='ig_feed'] {
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
+  .sm\:m-10 {
+    margin: 2.5rem;
+  }
   .sm\:w-2\/6 {
     width: 33.333333%;
   }
   .sm\:w-5\/6 {
     width: 83.333333%;
   }
-  .sm\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
+  .sm\:w-auto {
+    width: auto;
+  }
+  .sm\:w-full {
+    width: 100%;
   }
   .sm\:max-w-\[1000px\] {
     max-width: 1000px;
@@ -2253,14 +2249,26 @@ div[data-block-handle='ig_feed'] {
   .sm\:gap-2 {
     gap: 0.5rem;
   }
-  .sm\:self-end {
-    align-self: flex-end;
+  .sm\:place-self-stretch {
+    place-self: stretch;
+  }
+  .sm\:self-stretch {
+    align-self: stretch;
   }
   .sm\:overflow-hidden {
     overflow: hidden;
   }
+  .sm\:rounded-md {
+    border-radius: 0.375rem;
+  }
+  .sm\:border {
+    border-width: 1px;
+  }
   .sm\:border-r {
     border-right-width: 1px;
+  }
+  .sm\:p-10 {
+    padding: 2.5rem;
   }
   .sm\:px-4 {
     padding-left: 1rem;
@@ -2295,6 +2303,27 @@ div[data-block-handle='ig_feed'] {
 @media (min-width: 768px) {
   .md\:bottom-1\/2 {
     bottom: 50%;
+  }
+  .md\:top-1\/4 {
+    top: 25%;
+  }
+  .md\:top-1\/3 {
+    top: 33.333333%;
+  }
+  .md\:top-10 {
+    top: 2.5rem;
+  }
+  .md\:top-40 {
+    top: 10rem;
+  }
+  .md\:top-60 {
+    top: 15rem;
+  }
+  .md\:top-\[1vmin\] {
+    top: 1vmin;
+  }
+  .md\:top-\[10vmin\] {
+    top: 10vmin;
   }
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
@@ -2369,6 +2398,9 @@ div[data-block-handle='ig_feed'] {
   .md\:w-full {
     width: 100%;
   }
+  .md\:w-3\/4 {
+    width: 75%;
+  }
   .md\:max-w-\[450px\] {
     max-width: 450px;
   }
@@ -2405,6 +2437,12 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:gap-10 {
     gap: 2.5rem;
+  }
+  .md\:self-center {
+    align-self: center;
+  }
+  .md\:justify-self-center {
+    justify-self: center;
   }
   .md\:\!overflow-visible {
     overflow: visible !important;
