--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -35,7 +35,7 @@
     x-transition:leave="transition ease-in-out duration-300 transform"
     x-transition:leave-start="translate-x-0"
     x-transition:leave-end="translate-x-full"
-    class="absolute transition z-50 bg-white top-0 right-0  w-full flex flex-col shadow-l h-full md:w-[450px]">
+    class="fixed transition z-50 bg-white top-0 right-0  w-full flex flex-col shadow-l h-full md:w-[450px]">
     {% render 'loader' %}
     <div class="relative h-full flex flex-col">
       {% render 'cart-drawer-content' %}
