Add animation to logo slogan and update register page layout

--- a/assets/app.css
+++ b/assets/app.css
@@ -56,6 +56,8 @@
   flex: 0 0 auto;
   align-self: center;
   width: 70%;
+}
+.animate.logo-slogan {
   animation: shof-slogan 4.2s linear;
   animation-fill-mode: forwards;
 }
@@ -87,13 +89,13 @@
     opacity: 1;
   }
 }
-.st2 {
+.animate.st2 {
   stroke-dasharray: 401.6997375488;
   stroke-dashoffset: 401.6997375488;
   animation: shof-sh 4s ease-in;
   animation-fill-mode: forwards;
 }
-.st0 {
+.animate.st0 {
   stroke-dasharray: 257.032623291;
   stroke-dashoffset: 257.032623291;
   animation: shof-f 4s ease-in;
@@ -797,9 +799,6 @@ input[type='number']::-webkit-outer-spin-button,
 .pointer-events-none {
   pointer-events: none;
 }
-.collapse {
-  visibility: collapse;
-}
 .fixed {
   position: fixed;
 }
@@ -845,9 +844,6 @@ input[type='number']::-webkit-outer-spin-button,
 .right-0 {
   right: 0px;
 }
-.right-1 {
-  right: 0.25rem;
-}
 .right-4 {
   right: 1rem;
 }
@@ -868,9 +864,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .top-\[58px\] {
   top: 58px;
-}
-.bottom-1 {
-  bottom: 0.25rem;
 }
 .z-10 {
   z-index: 10;
@@ -1026,12 +1019,6 @@ input[type='number']::-webkit-outer-spin-button,
 .mt-auto {
   margin-top: auto;
 }
-.box-border {
-  box-sizing: border-box;
-}
-.box-content {
-  box-sizing: content-box;
-}
 .block {
   display: block;
 }
@@ -1119,15 +1106,19 @@ input[type='number']::-webkit-outer-spin-button,
 .h-screen {
   height: 100vh;
 }
-.max-h-max {
-  max-height: -moz-max-content;
-  max-height: max-content;
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+.min-h-0 {
+  min-height: 0px;
 }
 .min-h-screen {
   min-height: 100vh;
 }
-.min-h-0 {
-  min-height: 0px;
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 .w-1\/2 {
   width: 50%;
@@ -1156,9 +1147,6 @@ input[type='number']::-webkit-outer-spin-button,
 .w-7 {
   width: 1.75rem;
 }
-.w-\[70vmin\] {
-  width: 70vmin;
-}
 .w-auto {
   width: auto;
 }
@@ -1175,9 +1163,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .w-screen {
   width: 100vw;
-}
-.w-3\/4 {
-  width: 75%;
 }
 .min-w-\[250px\] {
   min-width: 250px;
@@ -1225,29 +1210,14 @@ input[type='number']::-webkit-outer-spin-button,
 .flex-1 {
   flex: 1 1 0%;
 }
-.flex-auto {
-  flex: 1 1 auto;
-}
 .flex-none {
   flex: none;
-}
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-.flex-shrink {
-  flex-shrink: 1;
 }
 .flex-grow {
   flex-grow: 1;
 }
-.flex-grow-0 {
-  flex-grow: 0;
-}
 .table-auto {
   table-layout: auto;
-}
-.border-collapse {
-  border-collapse: collapse;
 }
 .origin-right {
   transform-origin: right;
@@ -1369,6 +1339,9 @@ input[type='number']::-webkit-outer-spin-button,
 .justify-evenly {
   justify-content: space-evenly;
 }
+.justify-stretch {
+  justify-content: stretch;
+}
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1456,12 +1429,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .overflow-y-auto {
   overflow-y: auto;
-}
-.overflow-y-hidden {
-  overflow-y: hidden;
-}
-.overflow-y-scroll {
-  overflow-y: scroll;
 }
 .scroll-smooth {
   scroll-behavior: smooth;
@@ -1594,9 +1561,6 @@ input[type='number']::-webkit-outer-spin-button,
 .bg-textColor\/70 {
   background-color: rgb(29 29 29 / 0.7);
 }
-.bg-transparent {
-  background-color: transparent;
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1667,6 +1631,10 @@ input[type='number']::-webkit-outer-spin-button,
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1703,10 +1671,6 @@ input[type='number']::-webkit-outer-spin-button,
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1733,9 +1697,6 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .pt-8 {
   padding-top: 2rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1945,9 +1906,6 @@ input[type='number']::-webkit-outer-spin-button,
 .opacity-25 {
   opacity: 0.25;
 }
-.opacity-50 {
-  opacity: 0.5;
-}
 .opacity-70 {
   opacity: 0.7;
 }
@@ -2116,12 +2074,6 @@ div[data-block-handle='ig_feed'] {
     box-shadow: var(--shadow-medium);
   }
 }
-.placeholder\:text-white\/90::-moz-placeholder {
-  color: rgb(255 255 255 / 0.9);
-}
-.placeholder\:text-white\/90::placeholder {
-  color: rgb(255 255 255 / 0.9);
-}
 .hover\:-rotate-90:hover {
   --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2254,11 +2206,23 @@ div[data-block-handle='ig_feed'] {
   font-weight: 500;
 }
 @media (min-width: 640px) {
+  .sm\:absolute {
+    position: absolute;
+  }
+  .sm\:top-\[10vmin\] {
+    top: 10vmin;
+  }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
   .sm\:m-10 {
     margin: 2.5rem;
+  }
+  .sm\:h-auto {
+    height: auto;
+  }
+  .sm\:max-h-\[90vmin\] {
+    max-height: 90vmin;
   }
   .sm\:w-2\/6 {
     width: 33.333333%;
@@ -2266,17 +2230,20 @@ div[data-block-handle='ig_feed'] {
   .sm\:w-5\/6 {
     width: 83.333333%;
   }
-  .sm\:w-auto {
-    width: auto;
-  }
   .sm\:w-full {
     width: 100%;
+  }
+  .sm\:min-w-\[400px\] {
+    min-width: 400px;
   }
   .sm\:max-w-\[1000px\] {
     max-width: 1000px;
   }
   .sm\:flex-1 {
     flex: 1 1 0%;
+  }
+  .sm\:flex-none {
+    flex: none;
   }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2287,17 +2254,20 @@ div[data-block-handle='ig_feed'] {
   .sm\:flex-row {
     flex-direction: row;
   }
+  .sm\:items-start {
+    align-items: flex-start;
+  }
+  .sm\:items-center {
+    align-items: center;
+  }
   .sm\:justify-start {
     justify-content: flex-start;
   }
+  .sm\:justify-center {
+    justify-content: center;
+  }
   .sm\:gap-2 {
     gap: 0.5rem;
-  }
-  .sm\:place-self-stretch {
-    place-self: stretch;
-  }
-  .sm\:self-stretch {
-    align-self: stretch;
   }
   .sm\:overflow-hidden {
     overflow: hidden;
@@ -2305,14 +2275,23 @@ div[data-block-handle='ig_feed'] {
   .sm\:rounded-md {
     border-radius: 0.375rem;
   }
+  .sm\:rounded-xl {
+    border-radius: 0.75rem;
+  }
   .sm\:border {
     border-width: 1px;
   }
   .sm\:border-r {
     border-right-width: 1px;
   }
+  .sm\:bg-white\/50 {
+    background-color: rgb(255 255 255 / 0.5);
+  }
   .sm\:p-10 {
     padding: 2.5rem;
+  }
+  .sm\:p-4 {
+    padding: 1rem;
   }
   .sm\:px-4 {
     padding-left: 1rem;
@@ -2325,6 +2304,12 @@ div[data-block-handle='ig_feed'] {
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+  .sm\:pt-\[10vmin\] {
+    padding-top: 10vmin;
+  }
+  .sm\:pt-\[0vmin\] {
+    padding-top: 0vmin;
   }
   .sm\:text-left {
     text-align: left;
@@ -2340,6 +2325,11 @@ div[data-block-handle='ig_feed'] {
   .sm\:tracking-\[10px\] {
     letter-spacing: 10px;
   }
+  .sm\:backdrop-blur-sm {
+    --tw-backdrop-blur: blur(4px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  }
   .last\:sm\:border-none:last-child {
     border-style: none;
   }
@@ -2347,24 +2337,6 @@ div[data-block-handle='ig_feed'] {
 @media (min-width: 768px) {
   .md\:bottom-1\/2 {
     bottom: 50%;
-  }
-  .md\:top-1\/4 {
-    top: 25%;
-  }
-  .md\:top-1\/3 {
-    top: 33.333333%;
-  }
-  .md\:top-10 {
-    top: 2.5rem;
-  }
-  .md\:top-40 {
-    top: 10rem;
-  }
-  .md\:top-60 {
-    top: 15rem;
-  }
-  .md\:top-\[1vmin\] {
-    top: 1vmin;
   }
   .md\:top-\[10vmin\] {
     top: 10vmin;
@@ -2379,10 +2351,6 @@ div[data-block-handle='ig_feed'] {
   .md\:my-6 {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-  }
-  .md\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
   }
   .md\:mr-6 {
     margin-right: 1.5rem;
@@ -2417,11 +2385,22 @@ div[data-block-handle='ig_feed'] {
   .md\:h-\[200px\] {
     height: 200px;
   }
-  .md\:h-\[250px\] {
-    height: 250px;
-  }
   .md\:h-\[300px\] {
     height: 300px;
+  }
+  .md\:h-min {
+    height: -moz-min-content;
+    height: min-content;
+  }
+  .md\:h-auto {
+    height: auto;
+  }
+  .md\:max-h-fit {
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+  }
+  .md\:max-h-\[90vmin\] {
+    max-height: 90vmin;
   }
   .md\:w-1\/2 {
     width: 50%;
@@ -2441,9 +2420,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:w-full {
     width: 100%;
-  }
-  .md\:w-3\/4 {
-    width: 75%;
   }
   .md\:max-w-\[450px\] {
     max-width: 450px;
@@ -2481,12 +2457,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:gap-10 {
     gap: 2.5rem;
-  }
-  .md\:self-center {
-    align-self: center;
-  }
-  .md\:justify-self-center {
-    justify-self: center;
   }
   .md\:\!overflow-visible {
     overflow: visible !important;
