--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -1,12 +1,16 @@
-<div class="register max-w-sm mx-auto px-2">
+<div class="register fixed flex justify-stretch items-start inset-0 h-full bg-white sm:backdrop-blur-sm sm:bg-white/50 z-50 sm:justify-center sm:items-start sm:pt-[10vmin]">
 
-  <div class="h-full md:my-6 my-8">
+  <div class="flex-1 overflow-y-auto h-full sm:h-auto sm:max-h-[90vmin] items-stretch sm:flex-none bg-white sm:border p-4 sm:p-10 sm:rounded-xl sm:shadow-m flex flex-col sm:min-w-[400px] justify-start gap-4">
+    <div class="flex justify-center mb-4">
+      {% render 'logo'
+        , width: '200px' %}
+    </div>
     <header class="flex justify-between items-center text-center mb-4">
-      <h2 class="text-2xl uppercase w-full font-medium" tabindex="-1">
+      <h2 class="text-2xl uppercase w-full font-normal" tabindex="-1">
         Zarejestruj się
       </h2>
     </header>
-    <div class="flex items-center h-full">
+    <div class="flex items-start h-full">
       <div class="w-full">
 
         {%- form 'create_customer'
@@ -123,5 +127,10 @@
 
     </div>
   </div>
-
 </div>
+
+<style>
+  body {
+    overflow: hidden;
+  }
+</style>
