Update login and register templates

--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -2,7 +2,7 @@
   x-cloak
   x-data="{ resetPassword: false }"
   class="register fixed flex justify-stretch items-start inset-0 h-full bg-white sm:backdrop-blur-sm sm:bg-white/50 z-50 sm:justify-center sm:items-start sm:pt-[10vmin]">
-  <div class="flex-1 overflow-y-auto h-full sm:h-auto sm:max-h-[90vmin] items-stretch sm:flex-none bg-white sm:border p-4 sm:p-10 sm:rounded-xl sm:shadow-m flex flex-col sm:min-w-[400px] justify-start gap-4">
+  <div @click.outside="window.location = '{{ routes.root_url }}'" class="flex-1 overflow-y-auto h-full sm:h-auto sm:max-h-[90vmin] items-stretch sm:flex-none bg-white sm:border p-4 sm:p-10 sm:rounded-xl sm:shadow-m flex flex-col sm:min-w-[400px] justify-start gap-4">
     <div class="flex justify-center mb-4">
       {% render 'logo'
         , width: '200px' %}
