--- a/assets/app.css
+++ b/assets/app.css
@@ -569,6 +569,9 @@ input[type='number']::-webkit-outer-spin-button,
     margin: 0;
     -moz-appearance: textfield !important;
   }
+th {
+  font-weight: 500;
+}
 .color-theme {
     /* $ SHADOW */
     --shadow-color: 0deg 0% 68%;
@@ -986,9 +989,6 @@ input[type='number']::-webkit-outer-spin-button,
 .mr-3 {
   margin-right: 0.75rem;
 }
-.mt-0 {
-  margin-top: 0px;
-}
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1018,6 +1018,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .mt-auto {
   margin-top: auto;
+}
+.ml-4 {
+  margin-left: 1rem;
 }
 .block {
   display: block;
@@ -1106,9 +1109,9 @@ input[type='number']::-webkit-outer-spin-button,
 .h-screen {
   height: 100vh;
 }
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
 }
 .min-h-0 {
   min-height: 0px;
@@ -1116,9 +1119,9 @@ input[type='number']::-webkit-outer-spin-button,
 .min-h-screen {
   min-height: 100vh;
 }
-.min-h-fit {
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+.min-h-max {
+  min-height: -moz-max-content;
+  min-height: max-content;
 }
 .w-1\/2 {
   width: 50%;
@@ -1204,9 +1207,6 @@ input[type='number']::-webkit-outer-spin-button,
 .max-w-\[900px\] {
   max-width: 900px;
 }
-.max-w-sm {
-  max-width: 24rem;
-}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1272,6 +1272,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .resize-none {
   resize: none;
+}
+.resize {
+  resize: both;
 }
 .snap-x {
   scroll-snap-type: x var(--tw-scroll-snap-strictness);
@@ -1406,6 +1409,9 @@ input[type='number']::-webkit-outer-spin-button,
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
+.divide-neutral-200\/70 > :not([hidden]) ~ :not([hidden]) {
+  border-color: rgb(229 229 229 / 0.7);
+}
 .place-self-center {
   place-self: center;
 }
@@ -1467,6 +1473,10 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .border-2 {
   border-width: 2px;
+}
+.border-x {
+  border-left-width: 1px;
+  border-right-width: 1px;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -1542,6 +1552,14 @@ input[type='number']::-webkit-outer-spin-button,
   --tw-bg-opacity: 1;
   background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
+.bg-neutral-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+}
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
+}
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -1567,6 +1585,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
@@ -1677,9 +1698,6 @@ input[type='number']::-webkit-outer-spin-button,
 .pb-2 {
   padding-bottom: 0.5rem;
 }
-.pb-8 {
-  padding-bottom: 2rem;
-}
 .pl-9 {
   padding-left: 2.25rem;
 }
@@ -1689,14 +1707,17 @@ input[type='number']::-webkit-outer-spin-button,
 .pt-0 {
   padding-top: 0px;
 }
-.pt-3 {
-  padding-top: 0.75rem;
-}
 .pt-4 {
   padding-top: 1rem;
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pl-6 {
+  padding-left: 1.5rem;
+}
+.pl-4 {
+  padding-left: 1rem;
 }
 .text-left {
   text-align: left;
@@ -1811,6 +1832,10 @@ input[type='number']::-webkit-outer-spin-button,
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1834,6 +1859,10 @@ input[type='number']::-webkit-outer-spin-button,
 .text-neutral-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+.text-neutral-800 {
+  --tw-text-opacity: 1;
+  color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 .text-neutral-900 {
   --tw-text-opacity: 1;
@@ -2078,8 +2107,52 @@ div[data-block-handle='ig_feed'] {
     box-shadow: var(--shadow-high);
   }
 }
+@media (min-width: 768px) {
+
+  .md\:shadow-m {
+    box-shadow: var(--shadow-medium);
+  }
+}
+@media (min-width: 640px) {
+  .sm\:container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  @media (min-width: 640px) {
+    .sm\:container {
+      max-width: 640px;
+    }
+  }
+  @media (min-width: 768px) {
+    .sm\:container {
+      max-width: 768px;
+    }
+  }
+  @media (min-width: 1024px) {
+    .sm\:container {
+      max-width: 1024px;
+    }
+  }
+  @media (min-width: 1280px) {
+    .sm\:container {
+      max-width: 1280px;
+    }
+  }
+  @media (min-width: 1536px) {
+    .sm\:container {
+      max-width: 1536px;
+    }
+  }
+}
 .hover\:-rotate-90:hover {
   --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:rotate-90:hover {
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .hover\:scale-105:hover {
@@ -2106,6 +2179,9 @@ div[data-block-handle='ig_feed'] {
   --tw-scale-x: 1.3;
   --tw-scale-y: 1.3;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 .hover\:\!bg-gray-100:hover {
   --tw-bg-opacity: 1 !important;
@@ -2140,6 +2216,10 @@ div[data-block-handle='ig_feed'] {
 .hover\:text-accent:hover {
   --tw-text-opacity: 1;
   color: rgb(236 118 74 / var(--tw-text-opacity));
+}
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .hover\:text-hover:hover {
   --tw-text-opacity: 1;
@@ -2210,17 +2290,23 @@ div[data-block-handle='ig_feed'] {
   font-weight: 500;
 }
 @media (min-width: 640px) {
-  .sm\:absolute {
-    position: absolute;
-  }
-  .sm\:top-\[10vmin\] {
-    top: 10vmin;
-  }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
   .sm\:m-10 {
     margin: 2.5rem;
+  }
+  .sm\:block {
+    display: block;
+  }
+  .sm\:inline-block {
+    display: inline-block;
+  }
+  .sm\:inline {
+    display: inline;
+  }
+  .sm\:table-cell {
+    display: table-cell;
   }
   .sm\:h-auto {
     height: auto;
@@ -2236,6 +2322,10 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:w-full {
     width: 100%;
+  }
+  .sm\:w-max {
+    width: -moz-max-content;
+    width: max-content;
   }
   .sm\:min-w-\[400px\] {
     min-width: 400px;
@@ -2261,9 +2351,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:items-start {
     align-items: flex-start;
   }
-  .sm\:items-center {
-    align-items: center;
-  }
   .sm\:justify-start {
     justify-content: flex-start;
   }
@@ -2272,9 +2359,6 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:gap-2 {
     gap: 0.5rem;
-  }
-  .sm\:overflow-hidden {
-    overflow: hidden;
   }
   .sm\:rounded-md {
     border-radius: 0.375rem;
@@ -2288,17 +2372,11 @@ div[data-block-handle='ig_feed'] {
   .sm\:border-r {
     border-right-width: 1px;
   }
-  .sm\:bg-white\/50 {
-    background-color: rgb(255 255 255 / 0.5);
-  }
   .sm\:bg-white\/70 {
     background-color: rgb(255 255 255 / 0.7);
   }
   .sm\:p-10 {
     padding: 2.5rem;
-  }
-  .sm\:p-4 {
-    padding: 1rem;
   }
   .sm\:px-4 {
     padding-left: 1rem;
@@ -2314,9 +2392,6 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:pt-\[10vmin\] {
     padding-top: 10vmin;
-  }
-  .sm\:pt-\[0vmin\] {
-    padding-top: 0vmin;
   }
   .sm\:text-left {
     text-align: left;
@@ -2355,21 +2430,17 @@ div[data-block-handle='ig_feed'] {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-  .md\:my-6 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-  }
   .md\:mr-6 {
     margin-right: 1.5rem;
-  }
-  .md\:mt-5 {
-    margin-top: 1.25rem;
   }
   .md\:block {
     display: block;
   }
   .md\:flex {
     display: flex;
+  }
+  .md\:table-cell {
+    display: table-cell;
   }
   .md\:grid {
     display: grid;
@@ -2394,20 +2465,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:h-\[300px\] {
     height: 300px;
-  }
-  .md\:h-min {
-    height: -moz-min-content;
-    height: min-content;
-  }
-  .md\:h-auto {
-    height: auto;
-  }
-  .md\:max-h-fit {
-    max-height: -moz-fit-content;
-    max-height: fit-content;
-  }
-  .md\:max-h-\[90vmin\] {
-    max-height: 90vmin;
   }
   .md\:w-1\/2 {
     width: 50%;
