--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,4 +1,4 @@
-<div class="bg-shof-gray tracking-[4px] text-white font-normal relative w-full overflow-hidden mt-10">
+<div class="bg-shof-gray tracking-[4px] text-white font-normal relative w-full overflow-hidden">
   <div class="flex flex-col sm:flex-row sm:max-w-[1000px] mx-auto">
     {% for top_item in menus[section.settings.menu].links %}
       <div class="sm:flex-1 sm:border-r last:sm:border-none border-white">
