--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,92 +1,53 @@
-<div class="pt-3 pb-8 container" x-data="{ title: null }">
-  <h1 class="md:text-3xl text-2xl py-7">Konto</h1>
-  <div class="md:grid grid-cols-4 gap-6 block">
-    <div class="col-span-1">
-      <div class="">
-        {% render 'account-navigation' %}
-      </div>
+{% comment %} Mobile account nav {% endcomment %}
+<div x-ref="container" x-data="{
+open: true,
 
-      <div class="font-bold">
-        <div class="py-2">
-          <h2 class="pb-2 font-semibold">{{ customer.name }}</h2>
-          {{ customer.email }}
-        </div>
+toggleMenu() {
+  this.open = !this.open
+  // wait for dom to update
 
-        <div class="py-2">
-          <h2 class="pb-2 font-semibold">Domyślny adres:</h2>
-          {{ customer.default_address | format_address }}
-        </div>
-      </div>
+  this.$nextTick(() => {
+    this.updateHeight()
+  })
+
+},
+
+updateHeight() {
+  setTimeout(() => {
+    const navHeight = this.$refs.nav.children[0].getBoundingClientRect().height;
+    this.$refs.container.style.height = `${navHeight}px`
+    console.log(navHeight)
+},10);
+}
+}">
+
+  <div
+    x-cloak
+    x-show="open"
+    x-transition:enter="transition ease-in-out duration-300 transform"
+    x-transition:enter-start="-translate-x-full"
+    x-transition:enter-end="translate-x-0"
+    x-transition:leave="transition ease-in-out duration-300 transform"
+    x-transition:leave-start="translate-x-0"
+    x-transition:leave-end="-translate-x-full"
+    x-ref="nav"
+    class="absolute bg-white left-0 sm:shadow-m lg:hidden">
+    {% render 'account-navigation' mobile: true %}
+  </div>
+
+  <div class="hidden lg:hidden">
+    {% render 'account-navigation'
+      , mobile: true %}
+  </div>
+
+  <div class="sm:container flex ">
+    {% comment %} Desktop account nav {% endcomment %}
+    <div class="hidden lg:block">
+      {% render 'account-navigation' %}
     </div>
-
-    <div class="md:mt-5 mt-0 col-span-3">
-      <div class="sm:overflow-hidden">
-        <div class="">
-          <h3 class="text-2xl font-medium pb-2">Zamówienia</h3>
-
-          <div class="mt-3 overflow-hidden overflow-x-auto">
-            {% paginate customer.orders by 20 %}
-              {% if customer.orders.size != 0 %}
-                <table class="min-w-full divide-y divide-gray-200 border">
-                  <thead>
-                    <tr>
-                      <th class="text-left px-3 py-2">Numer zamówienia</th>
-                      <th class="text-left px-3 py-2">Data</th>
-                      <th class="text-left px-3 py-2">Status płatności</th>
-                      <th class="text-left px-3 py-2">Status zamówienia</th>
-                      <th class="text-left px-3 py-2">Suma</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for order in customer.orders %}
-                      <tr class="border-b border-gray-300 font-bold">
-                        <td class="px-3 py-2 whitespace-nowrap" data-label="order number">
-                          <a href="{{ order.customer_url }}">
-                            <div class="flex -space-x-2 overflow-hidden">
-                              {% for order_line in order.line_items limit: 3 %}
-                                {% if order_line.image %}
-                                  {{ order_line.image | image_url: width: 200 | image_tag: loading: 'lazy', class: 'inline-block md:w-8 md:h-8 h-6 w-6 rounded-full border object-cover' }}
-                                {% endif %}
-                              {% endfor %}
-                            </div>
-                            <span class="my-1 block">
-                              {{ order.name }}
-                            </span>
-                          </a>
-                        </td>
-                        <td class="px-3 py-2 whitespace-nowrap" data-label="Date">
-                          {{ order.created_at | time_tag: format: 'date' }}
-                        </td>
-                        <td class="px-3 py-2 whitespace-nowrap" data-label="Payment Status">
-                          {{ order.financial_status_label }}
-                        </td>
-                        <td class="px-3 py-2 whitespace-nowrap" data-label="Fulfillment Status">
-                          {{ order.fulfillment_status_label }}
-                        </td>
-                        <td class="px-3 py-2 whitespace-nowrap" data-label="Total">
-                          {{ order.total_price | money }}
-                        </td>
-                      </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              {% else %}
-                <p>Nie masz jeszcze zamówień</p>
-                <a href="{{ routes.all_products_collection_url }}" class="inline-block button mt-3">
-                  Kontynuuj zakupy
-                </a>
-              {% endif %}
-
-              {% if paginate.pages > 1 %}
-                <div class="pagination no-print">
-                  {% render 'pagination' %}
-                </div>
-              {% endif %}
-            {% endpaginate %}
-          </div>
-        </div>
-
-      </div>
+    {% comment %} CONTENT {% endcomment %}
+    <div class="sm:px-6 w-full">
+      {% render 'account-content' %}
     </div>
   </div>
 </div>
