--- a/assets/app.css
+++ b/assets/app.css
@@ -2544,6 +2544,9 @@ div[data-block-handle='ig_feed'] {
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
   .lg\:block {
     display: block;
   }
