--- a/snippets/account-navigation.liquid
+++ b/snippets/account-navigation.liquid
@@ -1,11 +1,11 @@
-<div class="border-x flex flex-col gap-2 divide-y w-screen sm:w-max h-max " x-data="{
+<div class=" flex flex-col gap-2 divide-y w-screen sm:w-max h-max " x-data="{
   links:[
     {url: '{{ routes.account_url }}', name: 'Szczegóły konta', path: '/account'},
     {url: '{{ routes.account_addresses_url }}', name: 'Wyświetl adresy ({{ customer.addresses_count }})', path: '/account/addresses'},
     {url: '{{ routes.account_logout_url }}', name: 'Wyloguj się', path: '/account/logout'}
   ]
 }">
-  <div class="flex justify-between items-center mt-2 px-2">
+  <div class="flex justify-between items-center mt-2 lg:mt-6 px-2">
     <h2 class="px-4 font-normal text-xl">Konto</h2>
 
     <button @click="open = false" class="lg:hidden p-2 flex justify-center items-center rounded-full hover:bg-gray-100 hover:scale-110 hover:-rotate-90 transition">
